--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">BPS Kebumen</string>
     <string name="nav_header_desc">Navigation header</string>
+    <string name="pengaturan">Pengaturan</string>
+    <string name="tentang">Tentang</string>
 </resources>
